Fix spacing in one column layout

--- a/assets/css/layout/one-col.styl
+++ b/assets/css/layout/one-col.styl
@@ -12,6 +12,14 @@
             border-top: 1px solid $blue-bg-dark
         }
 
+        .left, .full {
+            margin: h(2) 0;
+        }
+
+        .right {
+            margin: h(-1) 0 h(2)
+        }
+
         pre code {
             background: $blue-bg
         }
